[package]
name = "fileSync"
version = "0.1.0"
authors = ["black616angel"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#for build
libc = "0.2"

#for ftp
ftp = { git = "https://github.com/Black616Angel/rust-ftp" }

#for MySQL
diesel = { version = "1.4.4", features = [ "chrono" ] }
dotenv = "*"
chrono = { version = "*", features = ["serde"] }

#for pCloud
curl = "*"
