[package]
name = "file_sync"
version = "0.1.0"
authors = ["black616angel"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#for ftp
ftp = { git = "https://github.com/Black616Angel/rust-ftp" }

#for MySQL
diesel = { version = "1.4.4", features = [ "mysql", "chrono" ] }
dotenv = "*"
chrono = { version = "*", features = ["serde"] }

#for pCloud
curl = "*"

#for async
futures = { version = "*" }
tokio = {version = "*", features = ["full"] }

#threadpool = "*"
lazy_static = "*"

#for output
crossterm = "*"
